2002-06-24  Keith Seitz  <keiths@redhat.com>

	* Makefile.in (interps.o): Add gdb-events.h as a dependency.

	* gdb-events.sh (clear_gdb_event_hooks): New function.
	* gdb-events.c: Regenerate.
	* gdb-events.h: Regenerate.

	* cli-out.h (cli_out_set_stream): New function.
	* cli-out.c (cli_out_set_stream): New function.

	* interps.c: Include gdb-events.h.
	(clear_interpreter_hooks): Also clear out event handlers.
	(gdb_set_interpreter): Clear out any hooks/event handlers that
	may have been installed by old interpreter.

	* cli/cli-interp.c (cli_interpreter_exec): Set the stream for the
	cli's uiout to gdb_stdout, which has probably changed from it's
	initialization. Restore the original stream when we're done executing
	in the interpreter.

2002-06-18  Keith Seitz  <keiths@redhat.com>

	* breakpoint.c (internal_breakpoint_number): Make static global.
	(condition_command): Add modify breakpoint event notification.
	(commands_command): Likewise.
	(create_internal_breakpoint): internal_breakpoint_number is now global.
	Add create breakpoint event notification.
	(create_fork_vfork_event_catchpoint): Likewise.
	(create_exec_event_catchpoint): Likewise.
	(mention): Remove FIXME and create breakpoint event.
	(create_breakpoints): Add create breakpoint event notification.
	(watch_command_1): Likewise.
	(create_exception_catchpoint): Likewise.
	(set_breakpoint_sal): Likewise.
	(set_ignore_count): Add modify breakopint event notification.
	
	* interps.h: Add GDB_INTERPRETER_MI1. GDB_INTERPRETER_MI will
	now be mi version 2.

	* cli/cli-interp.c (cli_uiout): Make static.
	(cli_interp): Make static.
	(cli_interpreter_exec): Use cli_uiout instead of uiout.

2002-05-28  Keith Seitz  <keiths@redhat.com>

	* cli/cli-interp.c: New file. Almost entirely from Apple's
	sources. Collected and moved here.
	* mi/mi-interp.c: Ditto.
	* mi/mi-events.c: Ditto.
	* mi/mi.h: New file.
	* Makefile.in: Add new files.
	Update dependencies on interps.h.