@@ -59,6 +59,7 @@ typedef void (gdb_events_tracepoint_create_ftype) (int number);
 typedef void (gdb_events_tracepoint_delete_ftype) (int number);
 typedef void (gdb_events_tracepoint_modify_ftype) (int number);
 typedef void (gdb_events_architecture_changed_ftype) (void);
+typedef void (gdb_events_register_update_ftype) (int regno);
 
 
 /* gdb-events: object. */
@@ -72,6 +73,7 @@ struct gdb_events
     gdb_events_tracepoint_delete_ftype *tracepoint_delete;
     gdb_events_tracepoint_modify_ftype *tracepoint_modify;
     gdb_events_architecture_changed_ftype *architecture_changed;
+    gdb_events_register_update_ftype *register_update;
   };
 
 
@@ -85,6 +87,7 @@ extern void tracepoint_create_event (int number);
 extern void tracepoint_delete_event (int number);
 extern void tracepoint_modify_event (int number);
 extern void architecture_changed_event (void);
+extern void register_update_event (int regno);
 
 
 /* When GDB_EVENTS are not being used, completly disable them. */
@@ -97,6 +100,7 @@ extern void architecture_changed_event (void);
 #define tracepoint_delete_event(number) 0
 #define tracepoint_modify_event(number) 0
 #define architecture_changed_event() 0
+#define register_update_event(regno) 0
 #endif
 
 /* Install custom gdb-events hooks. */
